--- a/MiracleListRCL/MiracleListRCL.csproj
+++ b/MiracleListRCL/MiracleListRCL.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
   <RootNamespace>Web</RootNamespace>
  </PropertyGroup>
 
@@ -19,15 +19,20 @@
 
  <ItemGroup>
   <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0-preview.7.21378.6" />
  </ItemGroup>
-
 
  <ItemGroup>
   <ProjectReference Include="..\BO\BO.csproj" />
   <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
   <ProjectReference Include="..\MiracleListUtil\MiracleListUtil.csproj" />
+ </ItemGroup>
+
+
+ <ItemGroup>
+  <Folder Include="wwwroot\" />
  </ItemGroup>
 
 </Project>
