--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,8 +2,15 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
+  <TargetFramework>net6.0</TargetFramework>
   <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
+ </PropertyGroup>
+
+ <!--Versionsinformationen-->
+ <PropertyGroup>
+  <Version>0.0.2.0</Version>
+  <AssemblyVersion>0.0.2.0</AssemblyVersion>
+  <FileVersion>0.0.2.0</FileVersion>
  </PropertyGroup>
 
  <!--optionale Anwendungseinstellungen-->
@@ -16,8 +23,6 @@
   <Version>0.1.2.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.1.2.0</AssemblyVersion>
-  <FileVersion>0.1.2.0</FileVersion>
  </PropertyGroup>
 
  <!--Unterdrückung einiger Warnungen-->
@@ -27,9 +32,9 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.2" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json"  />
  </ItemGroup>
 
  <ItemGroup>
