--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -8,6 +8,8 @@
  <!--Versionsinformationen-->
  <PropertyGroup>
   <Version>0.5.2.0</Version>
+  <AssemblyVersion>0.5.2.0</AssemblyVersion>
+  <FileVersion>0.5.2.0</FileVersion>
  </PropertyGroup>
 	
  <!--optionale Anwendungseinstellungen-->
