--- a/MiracleListUtil/MiracleListUtil.csproj
+++ b/MiracleListUtil/MiracleListUtil.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+ <PropertyGroup>
+  <TargetFramework>net6.0</TargetFramework>
+ </PropertyGroup>
 
 
-  <ItemGroup>
-    <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.2" />
-  </ItemGroup>
+ <ItemGroup>
+  <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
+ </ItemGroup>
 
 
-  <ItemGroup>
-    <ProjectReference Include="..\BO\BO.csproj" />
-    <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
-  </ItemGroup>
+ <ItemGroup>
+  <ProjectReference Include="..\BO\BO.csproj" />
+  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+ </ItemGroup>
 
 </Project>
