--- a/MiracleListRCL/MiracleListRCL.csproj
+++ b/MiracleListRCL/MiracleListRCL.csproj
@@ -18,10 +18,10 @@
 
 
  <ItemGroup>
-  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.7.21378.6" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Blazored.Toast" Version="3.2.2" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
  </ItemGroup>
 
  <ItemGroup>
