--- a/MiracleListUtil/MiracleListUtil.csproj
+++ b/MiracleListUtil/MiracleListUtil.csproj
@@ -6,9 +6,9 @@
 
 
  <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.7.21378.6" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
  </ItemGroup>
 
 
