--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -36,10 +36,10 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
