--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -35,17 +35,17 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="6.0.0-preview.7.21377.19" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
  </ItemGroup>
 
  <ItemGroup>
   <!--Zusatzpakete-->
-  <PackageReference Include="Blazored.LocalStorage" Version="4.1.2" />
-  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0-preview.7.21378.6" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+  <PackageReference Include="Blazored.Toast" Version="3.2.2" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
  </ItemGroup>
  
  <!--Projektreferenzen-->
