--- a/MiracleListRCL/MiracleListRCL.csproj
+++ b/MiracleListRCL/MiracleListRCL.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
  <PropertyGroup>
-  <TargetFramework>net6.0</TargetFramework>
+  <TargetFramework>net7.0</TargetFramework>
   <RootNamespace>Web</RootNamespace>
  </PropertyGroup>
 
@@ -19,9 +19,9 @@
 
  <ItemGroup>
   <PackageReference Include="Blazored.Toast" Version="3.2.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
  </ItemGroup>
 
  <ItemGroup>
