--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -2,14 +2,12 @@
 
  <!--notwendige Frameworkeinstellungen-->
  <PropertyGroup>
-  <TargetFramework>net6.0</TargetFramework>
+  <TargetFramework>net7.0</TargetFramework>
  </PropertyGroup>
 
  <!--Versionsinformationen-->
  <PropertyGroup>
-  <Version>0.6.2.0</Version>
-  <AssemblyVersion>0.6.2.0</AssemblyVersion>
-  <FileVersion>0.6.2.0</FileVersion>
+  <Version>0.6.3.0</Version>
  </PropertyGroup>
 	
  <!--optionale Anwendungseinstellungen-->
@@ -35,17 +33,18 @@
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0" PrivateAssets="all" />
-  <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.*" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
+
  </ItemGroup>
 
  <ItemGroup>
   <!--Zusatzpakete-->
-  <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
   <PackageReference Include="Blazored.Toast" Version="3.2.2" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.*" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
