--- a/MiracleListUtil/MiracleListUtil.csproj
+++ b/MiracleListUtil/MiracleListUtil.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
  <PropertyGroup>
-  <TargetFramework>net6.0</TargetFramework>
+  <TargetFramework>net7.0</TargetFramework>
  </PropertyGroup>
 
 
  <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
+  <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.*" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.*" />
  </ItemGroup>
 
 
