--- a/BO/BO.csproj
+++ b/BO/BO.csproj
@@ -1,30 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Globals">
-    <SccProjectName>SAK</SccProjectName>
-    <SccProvider>SAK</SccProvider>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccLocalPath>SAK</SccLocalPath>
-  <Version>2.23.0.0</Version><AssemblyVersion>2.23.0.0</AssemblyVersion><FileVersion>2.23.0.0</FileVersion><InformationalVersion>2.23.0.0-08/10/2020 17:14:07</InformationalVersion><Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2020</Copyright></PropertyGroup>
+ <PropertyGroup Label="Globals">
+  <SccProjectName>SAK</SccProjectName>
+  <SccProvider>SAK</SccProvider>
+  <SccAuxPath>SAK</SccAuxPath>
+  <SccLocalPath>SAK</SccLocalPath>
+  <Version>2.23.0.0</Version>
+  <AssemblyVersion>2.23.0.0</AssemblyVersion>
+  <FileVersion>2.23.0.0</FileVersion>
+  <InformationalVersion>2.23.0.0-08/10/2020 17:14:07</InformationalVersion>
+  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2022</Copyright>
+ </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>BO</AssemblyName>
-    <PackageId>GO</PackageId>
-    <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
+ <PropertyGroup>
+  <TargetFramework>netstandard2.0</TargetFramework>
+  <AssemblyName>BO</AssemblyName>
+  <PackageId>GO</PackageId>
+  <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
 
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-  </PropertyGroup>
+  <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+  <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+  <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+ </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-  </ItemGroup>
+ <ItemGroup>
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
+  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+ </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Update="NETStandard.Library" Version="2.0.3" />
-  </ItemGroup>
+ <ItemGroup>
+  <PackageReference Update="NETStandard.Library" Version="2.0.3" />
+ </ItemGroup>
 
 </Project>
