--- a/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
+++ b/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
@@ -1,21 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  <Version>2.23.0.0</Version><AssemblyVersion>2.23.0.0</AssemblyVersion><FileVersion>2.23.0.0</FileVersion><InformationalVersion>2.23.0.0-08/10/2020 17:14:07</InformationalVersion><Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2020</Copyright></PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
  <PropertyGroup>
-  <NoWarn>$(NoWarn);NU1701</NoWarn> 
+  <TargetFramework>netstandard2.0</TargetFramework>
+  <Version>2.23.0.0</Version>
+  <AssemblyVersion>2.23.0.0</AssemblyVersion>
+  <FileVersion>2.23.0.0</FileVersion>
+  <InformationalVersion>2.23.0.0-08/10/2020 17:14:07</InformationalVersion>
+  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2020</Copyright>
  </PropertyGroup>
- 
+
+ <PropertyGroup>
+  <NoWarn>$(NoWarn);NU1701</NoWarn>
+ </PropertyGroup>
+
  <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-  </ItemGroup>
- 
+  <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
+  <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
+  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+ </ItemGroup>
+
  <ItemGroup>
-   <ProjectReference Include="..\BO\BO.csproj" />
+  <ProjectReference Include="..\BO\BO.csproj" />
  </ItemGroup>
 
 </Project>
