--- a/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
+++ b/MiracleListAPI_Proxy/MiracleListAPI_Proxy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
  <PropertyGroup>
   <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,7 +6,7 @@
   <AssemblyVersion>2.23.0.0</AssemblyVersion>
   <FileVersion>2.23.0.0</FileVersion>
   <InformationalVersion>2.23.0.0-08/10/2020 17:14:07</InformationalVersion>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2020</Copyright>
+  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2018-2022</Copyright>
  </PropertyGroup>
 
  <PropertyGroup>
