--- a/MiracleListBW/MiracleListBW.csproj
+++ b/MiracleListBW/MiracleListBW.csproj
@@ -12,14 +12,16 @@
   <Authors>Dr. Holger Schwichtenberg, www.IT-Visions.de</Authors>
   <Company>www.IT-Visions.de</Company>
   <Product>MiracleList</Product>
-  <Version>0.5.1.0</Version>
+  <Version>0.4.1.0</Version>
   <RootNamespace>Web</RootNamespace>
   <StartupObject>Web.Program</StartupObject>
-  <AssemblyVersion>0.5.1.0</AssemblyVersion>
-  <FileVersion>0.5.1.0</FileVersion>
+  <AssemblyVersion>0.4.1.0</AssemblyVersion>
+  <FileVersion>0.4.1.0</FileVersion>
  </PropertyGroup>
+ <ItemGroup>
+   <None Remove="Pages\Login.razor.css" />
+ </ItemGroup>
 
- <!--Lazy Loading-->
  <ItemGroup>
   <BlazorWebAssemblyLazyLoad Include="MiracleListRCL.dll" />
  </ItemGroup>
@@ -28,16 +30,19 @@
  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
   <NoWarn>1701;1702;1998</NoWarn>
  </PropertyGroup>
+ <ItemGroup>
+   <Content Include="Pages\Login.razor.css">
+     <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+     <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+   </Content>
+ </ItemGroup>
 
  <ItemGroup>
   <!--Standardreferenzen für BW-->
-  <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
-  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-rc.1.20451.17" />
-  <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-rc.1.20451.17" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0" PrivateAssets="all" />
+  <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0" />
  </ItemGroup>
 
  <!--Projektreferenzen-->
