--- a/MiracleListRCL/MiracleListRCL.csproj
+++ b/MiracleListRCL/MiracleListRCL.csproj
@@ -1,38 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <PropertyGroup>
-  <TargetFramework>net5.0</TargetFramework>
-  <RootNamespace>Web</RootNamespace>
- </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Web</RootNamespace>
+  </PropertyGroup>
 
- <ItemGroup>
-  <None Remove="Pages\Index.razor.css" />
- </ItemGroup>
+  <ItemGroup>
+    <None Remove="Pages\Index.razor.css" />
+  </ItemGroup>
 
- <ItemGroup>
-  <Content Include="Pages\Index.razor.css">
-   <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-   <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-  </Content>
- </ItemGroup>
-
-
- <ItemGroup>
-  <PackageReference Include="Blazored.Toast" Version="3.1.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-rc.1.20451.17" />
-  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0-rc.1.20451.17" />
- </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Index.razor.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
 
- <ItemGroup>
-  <ProjectReference Include="..\BO\BO.csproj" />
-  <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
-  <ProjectReference Include="..\MiracleListUtil\MiracleListUtil.csproj" />
- </ItemGroup>
+  <ItemGroup>
+     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
+  </ItemGroup>
 
 
- <ItemGroup>
-  <Folder Include="wwwroot\" />
- </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BO\BO.csproj" />
+    <ProjectReference Include="..\MiracleListAPI_Proxy\MiracleListAPI_Proxy.csproj" />
+    <ProjectReference Include="..\MiracleListUtil\MiracleListUtil.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
 
 </Project>
